--- a/poll/templates/poll2.html
+++ b/poll/templates/poll2.html
@@ -1,9 +1,18 @@
 {% extends "base.html"%}
 {% block content %}
 <form action="/poll2" method="post">
-    <p><label for="id_resp4">Answer 4:<br /></label> <textarea id="id_resp4" name="resp4" rows="4" cols="60"></textarea></p>
-    <p><label for="id_resp5">Answer 5:<br /></label> <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea></p>
-    <p><label for="id_info">Do you like receive information of results obtained with the model?</label> <input id="id_info" name="info" type="checkbox" /></p>
+    <p>
+        <label for="id_resp4">Answer 4:<br /></label>
+        <textarea id="id_resp4" name="resp4" rows="4" cols="60"></textarea>
+    </p>
+    <p>
+        <label for="id_resp5">Have you always worked the same number of the hours in the project? or have you had different stages of work? If you have had different stages, could you tell us the different stages by observing the graph?<br /></label>
+        <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
+    </p>
+    <p>
+        <label for="id_info">Do you like receive information of results obtained with the model?</label>
+        <input id="id_info" name="info" type="checkbox" />
+    </p>
     <div class="submit_button">
         <input type="submit" value="Submit" />
     </div>
