Name changed to survey_creator

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -3,14 +3,14 @@
 <html lang="en">
 
 <head>
-    <title>Short poll to tune up a new Effort Estimation Model</title>
+    <title>Short survey to tune up a new Effort Estimation Model</title>
     <link rel="stylesheet" type="text/css" media="all" href="{{ STATIC_URL }}css/main.css" />
     <meta charset="utf-8" />
 </head>
 
 <body>
     <div id="title">
-        <h3>Short poll to obtain information which can help us to tune up an effort estimation model based in CVS repositories</h3>
+        <h3>Short survey to obtain information which can help us to tune up an effort estimation model based in CVS repositories</h3>
     </div>
     <div id="error">
         <p>{{ error }}</p>
