--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 {% block content %}
-<form action="/poll2" method="post">
+<form action="/survey2" method="post">
     <p>
         <label for="id_resp4">Answer 4:<br /></label>
         <textarea id="id_resp4" name="resp4" rows="4" cols="60"></textarea>
