--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -6,7 +6,7 @@
 <form action="/survey2" method="post">
 {% endif %}
     <p>
-        <label for="id_resp1">How many hours a week do you spend more or less in the project?<br /></label>
+        <label for="id_resp1">On average, how many hours a week do you spend in the project?<br /></label>
         <select id="id_resp1" name="resp1">
             <option selected value="None">Choose one option</option>
             <option value=">40">More than 40</option>
@@ -19,7 +19,7 @@
         </select>
     </p>
     <p>
-        <label for="id_resp2">Of the hours you spend at project, how long is coding?<br /></label>
+        <label for="id_resp2">How much of your time spent in the project is coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
             <option value="100">100%</option>
@@ -36,20 +36,20 @@
         </select>
     </p>
     <p>
-        <label for="id_resp3">The day that you program, Do you make at least one commit?<br /></label>
+        <label for="id_resp3">Do you make at least one commit to the repository the days you code?<br /></label>
         <select id="id_resp3" name="resp3">
             <option selected value="None">Choose one option</option>
-            <option value="True">True</option>
-            <option value="False">False</option>
+            <option value="True">Yes</option>
+            <option value="False">No</option>
         </select>
     </p>
     {% if flag_info %}
     <p>
-        <label for="id_resp5">Have you always worked the same number of the hours in the project? or have you had different stages of work? If you have had different stages, could you tell us the different stages by observing the graph?<br /></label>
+        <label for="id_resp5">Have you always worked the same number of the hours in the project or have you had different stages of work? If you have had different stages, could you tell us the different stages by observing the graph? (see below)<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Do you like receive information of results obtained with the model?</label>
+        <label for="id_info">Do you like receive information of the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
