--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -13,9 +13,7 @@
         <label for="id_info">Do you like receive information of the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
-    <div class="submit_button">
-        <input type="submit" value="Submit" />
-    </div>
+    <input type="submit" value="Submit" class="submit_button" />
 </form>
 <img src="{{ STATIC_URL }}img/{{ figure }}" id="figure" alt="Work done during the months of the project by the author" />
 {% endblock%}
