--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
+<!doctype html>
+<html>
 <head>
-    <title>Short survey to tune up a new Effort Estimation Model</title>
+	<title>Short survey to tune up a new Effort Estimation Model</title>
     <link rel="stylesheet" type="text/css" media="all" href="{{ STATIC_URL }}css/main.css" />
-    <meta charset="utf-8" />
+	<meta charset="utf-8">
+	<link href="main.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-    <div id="title">
-        <h3>Short survey to obtain information which can help us to tune up an effort estimation model based in CVS repositories</h3>
-    </div>
+	<div id="banner">
+		<img id="logo" src="{{ STATIC_URL }}img/logo-libresoft.png" align="left" alt="Logo Libresoft"/>
+    	<h2>Short survey to obtain information which can help us to tune up an effort estimation model based in CVS repositories</h2>
+	</div>
+	<hr>
     <div id="error">
         <p>{{ error }}</p>
     </div>
@@ -20,5 +20,4 @@
         {% block content %}{% endblock %}
     </div>
 </body>
-
 </html>
