--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -53,9 +53,7 @@
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
-    <div class="submit_button">
-        <input type="submit" value="Submit" />
-    </div>
+    <input type="submit" value="Submit" class="submit_button" />
 </form>
 {% if flag_fig %}
 <img src="{{ STATIC_URL }}img/{{ figure }}" id="figure" alt="Work done during the months of the project by the author" />
