new version of the HTML pages

--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -1,10 +1,28 @@
 {% extends "base.html"%}
 {% block content %}
 <div id="introduction-no-line">
-    <p>
-        If you have a problem or question, please send us an email and we answer you as fast as possible.<br>
-        Thank you.<br>
-        <a target="_blank" href="mailto:ccervigon@libresoft.es"> Clic to mail </a>
-    </p>
+          <p>
+             You can contact the research team by email at <strong>c.cervigon at alumnos.urjc.es</strong>
+             or (if available) in the IRC on Freenode in the  #libresoft channel
+             (you can use the <a href="https://webchat.freenode.net/">Freenode web interface</a> as well).
+          </p>
+
+          <p>
+             The research team is part of the <a href="http://www.libresoft.es">GSyC/LibreSoft research group</a>
+             at the <a href="http://www.urjc.es">Universidad Rey Juan Carlos</a>, a public university in the
+             South of the region of Madrid (Spain), and <a href="http://www.brunel.ac.uk/">Brunel University</a>, a university close to London (UK). These groups have been active for over 10 years researching
+             about FLOSS, collaborating with many FLOSS communities and offering a
+             <a href="http://master.libresoft.es">masters on FLOSS</a>.
+          </p>
+
+
+          <p>
+             Especifically, in charge of the FLOSS 2013 survey are following persons:
+             <ul>
+               <li><a href="http://es.linkedin.com/in/carloscervigonavila‎">Carlos Cervigón Ávila</a> (ccervigon on freenode)</li>
+               <li><a href="http://gsyc.es/~grex">Gregorio Robles</a> (grex_ on freenode)</li>
+               <li><a href="http://www.brunel.ac.uk/">Andrea Capiluppi</a></li>
+             </ul>
+          </p>
 </div>
 {% endblock%}
