--- a/survey/templates/information.html
+++ b/survey/templates/information.html
@@ -1,8 +1,32 @@
 {% extends "base.html"%}
 {% block content %}
 <div id="introduction-no-line">
-    <p>
-        Information about research.
+    <p>        
+Traditional software development effort estimation are used by companies in
+the early phases of a project to estimate the number of developers and the 
+amount of time that a project will require. Once the project is over, the
+company should know the actual effort it has devoted, and no estimation is required.
+</p>
+
+<p>
+In Free/Open Source Software (FOSS) projects, where volunteer developers may
+co-operate with professional developers from several companies, the total
+amount of effort invested in the project is usually not known even after the
+development has been done. Companies involved in FOSS are usually aware of the
+effort they put into the projects, but have difficulties in knowing the effort
+by the rest of the community, including the other companies that collaborate
+on the project.
     </p>
+
+<p>
+In this research we mine software versioning system data to quantify the actual effort 
+provided by the contributors of several FOSS
+projects, in order to produce an ex-post evaluation of the applied effort. We
+propose several approaches to quantify the effort based on the data obtained
+and apply it to several FOSS projects. We compare the
+observed effort to validate the effort estimated by traditional effort 
+estimation models.
+</p>
+
 </div>
 {% endblock%}
