--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -9,20 +9,20 @@
         <label for="id_resp1">On average, how many hours a week do you spend in the project?<br /></label>
         <select id="id_resp1" name="resp1">
             <option selected value="None">Choose one option</option>
-            <option value=">40">More than 40</option>
-            <option value="40">Around 40</option>
-            <option value="30">Around 30</option>
-            <option value="20">Around 20</option>
-            <option value="10">Around 10</option>
-            <option value="7">Around 7</option>
-            <option value="<7">Less than 7</option>
+            <option value=">40">More than 40h</option>
+            <option value="40">Around 40h</option>
+            <option value="30">Around 30h</option>
+            <option value="20">Around 20h</option>
+            <option value="10">Around 10h</option>
+            <option value="7">Around 7h</option>
+            <option value="<7">Less than 5h</option>
         </select>
     </p>
     <p>
         <label for="id_resp2">How much of your time spent in the project is coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
-            <option value="100">100%</option>
+            <option value="100">Approx. 100%</option>
             <option value="90">Around 90%</option>
             <option value="80">Around 80%</option>
             <option value="70">Around 70%</option>
@@ -49,7 +49,7 @@
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Do you like receive information of the results of our research?</label>
+        <label for="id_info">Would you like to receive information about the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
