--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -10,7 +10,7 @@
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Do you like receive information of the results of our research?</label>
+        <label for="id_info">Would you like to receive information about the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     <input type="submit" value="Submit" class="submit_button" />
