--- a/survey/templates/thanks.html
+++ b/survey/templates/thanks.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 {% block content %}
 <div id="thanks">
-    Thank you!!!
+    Thank you!!! Your responses have been saved.
 </div>
 {% endblock%}
