--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="robots" content="index, follow"/>
     <link rel="stylesheet" media="all" href="{{ STATIC_URL }}css/main.css" type="text/css"/>
-    <title>Short survey to tune up a new Effort Estimation Model</title>
+    <title>Short survey to tune up an Effort Estimation Model for Free/Libre/Open Source Software</title>
 </head>
 <body>
     <div id="wrapper">
@@ -14,7 +14,7 @@
                     <img alt="LibreSoft Group" width="200px" src="{{ STATIC_URL }}img/logo-libresoft.png"/>
                 </a>
                 <div id="title">
-                    <h2>Short survey to obtain information which can help us to tune up an effort estimation model based in CVS repositories</h2>
+                    <h2>Short survey to tune up an effort estimation model based on versioning repositories</h2>
                 </div>
                 <hr>
             </div>
@@ -25,7 +25,7 @@
                             <ul>
                                 <li><a href="/info">Information</a></li>
                                 <li><a href="/result">Results</a></li>
-                                <li><a href="/contact">Contact</a></li>
+                                <li><a href="/contact">About</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -37,8 +37,8 @@
             <div id="footer">
                 <div id="notice">
                     <p>
-                        Copyright © 2013 <a href="http://www.libresoft.es">Libresoft Research Group at Universidad Rey Juan Carlos</a>. <strong><a href="/contact">Contact us</a></strong>.<br>
-                        The design of this website is based in <a href="http://floss2013.libresoft.es/">FLOSS Survey 2013</a>.<br>
+                        Copyright © 2014 <a href="http://www.libresoft.es">Libresoft Research Group at Universidad Rey Juan Carlos</a>. <strong><a href="/contact">Contact us</a></strong>.<br>
+                        The design of this website is based on the one used for the <a href="http://floss2013.libresoft.es/">FLOSS Survey 2013</a>.<br>
                         Site design released under the <a href="http://www.gnu.org/licenses/agpl.html">GNU AGPLv3</a>.
                     </p>
                 </div>
