new version of the HTML pages

--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -2,7 +2,8 @@
 {% block content %}
 <div id="introduction">
     <p>
-        Welcome to the survey
+        Welcome to the survey. The survey consist of 6 small questions. It should
+take you around 2-3 minutes to answer it.
     </p>
 </div>
 <div id="error">
@@ -14,5 +15,14 @@
         <p align="center"><label for="id_email">Email:</label> <input id="id_email" maxlength="40" name="email" type="text" /></p>
         <input type="submit" value="Submit" class="submit_button" />
     </form>
+
+<p>
+  This survey has been launched by researchers from the Universidad Rey Juan Carlos 
+and Brunel University in order to validate their effort estimation models for 
+Free/Open Source Software projects. Your input and feedback is much appreciated.
+Please, see the <a href="information.html">information page</a> for more information.
+</p>
+</p>
+
 </div>
 {% endblock%}
