--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction">
     <p>
-        Welcome to the survey. The survey consist of 6 small questions. It should
+        Welcome to the survey. The survey consist of 6 quick questions. It should
 take you around 2-3 minutes to answer it.
     </p>
 </div>
@@ -17,8 +17,8 @@ take you around 2-3 minutes to answer it.
     </form>
 
 <p>
-  This survey has been launched by researchers from the Universidad Rey Juan Carlos 
-and Brunel University in order to validate their effort estimation models for 
+  This survey has been launched by researchers from the Universidad Rey Juan Carlos (Spain) 
+and Brunel University (UK) in order to validate their effort estimation models for 
 Free/Open Source Software projects. Your input and feedback is much appreciated.
 Please, see the <a href="information.html">information page</a> for more information.
 </p>
