new version of the HTML pages

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -6,7 +6,7 @@
 <form action="/survey2" method="post">
 {% endif %}
     <p>
-        <label for="id_resp1">On average, how many hours a week do you spend in the project?<br /></label>
+        <label for="id_resp1">On average, how many hours in a week do you spend in the project?<br /></label>
         <select id="id_resp1" name="resp1">
             <option selected value="None">Choose one option</option>
             <option value=">40">More than 40h</option>
@@ -19,7 +19,7 @@
         </select>
     </p>
     <p>
-        <label for="id_resp2">How much of your time spent in the project is coding?<br /></label>
+        <label for="id_resp2"> How much of the time you spent in the project is coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
             <option value="100">Approx. 100%</option>
@@ -45,11 +45,11 @@
     </p>
     {% if flag_info %}
     <p>
-        <label for="id_resp5">Have you always worked the same number of the hours in the project or have you had different stages of work? If you have had different stages, could you tell us the different stages by observing the graph? (see below)<br /></label>
+        <label for="id_resp5"> Did you always work the same hours in the project, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases using the graph below?<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Would you like to receive information about the results of our research?</label>
+        <label for="id_info">Would you like to receive further information on the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
