--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -6,11 +6,11 @@
         <textarea id="id_resp4" name="resp4" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_resp5">Have you always worked the same number of the hours in the project or have you had different stages of work? If you have had different stages, could you tell us the different stages by observing the graph? (see below)<br /></label>
+        <label for="id_resp5">Did you always work the same hours in the project, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases using the graph below?<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Would you like to receive information about the results of our research?</label>
+        <label for="id_info">Would you like to receive further information on the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     <input type="submit" value="Submit" class="submit_button" />
