new version of the HTML pages

--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -2,8 +2,7 @@
 {% block content %}
 <div id="introduction">
     <p>
-        Welcome to the survey. The survey consist of 6 quick questions. It should
-take you around 2-3 minutes to answer it.
+        Welcome to the survey.
     </p>
 </div>
 <div id="error">
@@ -16,6 +15,10 @@ take you around 2-3 minutes to answer it.
         <input type="submit" value="Submit" class="submit_button" />
     </form>
 
+<p>
+ The survey consist of 6 quick questions. It should
+take you around 2-3 minutes to answer it.
+</p>
 <p>
   This survey has been launched by researchers from the Universidad Rey Juan Carlos (Spain) 
 and Brunel University (UK) in order to validate their effort estimation models for 
