new version of the HTML pages

--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -21,7 +21,7 @@
              <ul>
                <li><a href="http://es.linkedin.com/in/carloscervigonavila‎">Carlos Cervigón Ávila</a> (ccervigon on freenode)</li>
                <li><a href="http://gsyc.es/~grex">Gregorio Robles</a> (grex_ on freenode)</li>
-               <li><a href="http://www.brunel.ac.uk/">Andrea Capiluppi</a></li>
+               <li><a href="http://www.brunel.ac.uk/siscm/disc/people-in-disc/academic-staff/dr-andrea-capiluppi">Andrea Capiluppi</a></li>
              </ul>
           </p>
 </div>
