new version of the HTML pages

--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -17,7 +17,7 @@
 
 
           <p>
-             Especifically, in charge of the FLOSS 2013 survey are following persons:
+             Especifically, in charge of this survey are following persons:
              <ul>
                <li><a href="http://es.linkedin.com/in/carloscervigonavila‎">Carlos Cervigón Ávila</a> (ccervigon on freenode)</li>
                <li><a href="http://gsyc.es/~grex">Gregorio Robles</a> (grex_ on freenode)</li>
