new version of the HTML pages

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -24,7 +24,7 @@
                         <li class="libresoft"><a href="/">Home</a>
                             <ul>
                                 <li><a href="/info">Information</a></li>
-                                <li><a href="/contact">About</a></li>
+                                <li><a href="/contact">About / Contact</a></li>
                             </ul>
                         </li>
                     </ul>
