new version of the HTML pages

--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction">
     <p>
-        Welcome to the survey.
+        Welcome to our effort estimation survey. We thank you in advance for your participation.
     </p>
 </div>
 <div id="error">
@@ -14,7 +14,7 @@
         <p align="center"><label for="id_email">Email:</label> <input id="id_email" maxlength="40" name="email" type="text" /></p>
         <input type="submit" value="Submit" class="submit_button" />
     </form>
-
+<br/>
 <p>
  The survey consist of 6 quick questions. It should
 take you around 2-3 minutes to answer it.
